# pycon-property-testing-legacy-code

./: .env  pyproject.toml
.hypothesis/examples/172ab64175fc96ea/: 3821d97398e9eda4
.hypothesis/examples/347575405af031ce/: 507805ca287290d8
.hypothesis/examples/3a216d96143c3000/: 05c856147591a9b7  55424ec57ac5c91f  b637aa80d4f8d787  be87f6a116f80558  e2f46a0c75173cbb
.hypothesis/examples/3efa5f3a08d97ec7/: 1b437b25d9521c2d  528ea6d9065f1069  6d880b7cd0925754  75453d68ef87b105  925a285b8bb6d17d
.hypothesis/examples/4117b0cb3495a414/: 1f0a349aa57d60f6
.hypothesis/examples/420117359d10e48d/: 5bc351d1b510441e
.hypothesis/examples/560e9cd71454e065/: 0f7add3fd08c33c6  21b42bf7d2da47d1  3975c4048bcfa585  4c19146180e3d6b7  4fcddc9e460f5f47  88d58595dcff6a5a  c42ea606b1515679
.hypothesis/examples/5727054e9d0b39ef/: 177c5c51f0fdba94  2dde0502b966e3c0  3c807c406a64d112  7ef68422398fe4a7
.hypothesis/examples/5e406e5bf5b86989/: 2b1f51be6fc62de6  a983d36d2d75ee7d  b24cb4c2bee39a1e
.hypothesis/examples/6cf35123ad5c4fe7/: 023bfd44a89ed4db  0a26ddc34f93958a  438687048c0c8368  95ed83a35ea7b524  9b99eb3d2cec4941  a0852ed1906d7285
.hypothesis/examples/700c0c8b554ff336/: 27c38059b6dd5cdf
.hypothesis/examples/82ed691914d91064/: 4da924c0602dec30
.hypothesis/examples/8e7e29cb6176a79c/: 0c25ad6f546790cc  198345a8a0fc2004  2b6338a2c62e42a9  3157f3f70d4f7ade  6ec21266c2024381  (+3 more)
property_testing/encryption_example/: encrypt.py  encryption_update.py
tests/encryption_example/: test_property_encryption.py  test_property_encryption_update.py  test_unit_encryption.py
(+27 files in other folders)
